# meridb

./: Cargo.toml  LICENSE  Makefile  Readme.md  crates.js  help.html  search-index.js  settings.html  src-files.js  taplo.toml
.github/workflows/: ci.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/catalog/: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: logging.rs  main.rs
crates/cli/src/input_handler/: editor.rs  history.rs  terminal.rs
crates/exec/: Cargo.toml
crates/sql/: Cargo.toml
crates/storage/: Cargo.toml
crates/types/: Cargo.toml
data/: history.txt  test.db
database/: fn.create_database.html
database/session/: index.html
docs/: ARCHITECTURE.md  ROADMAP.md
executor/: index.html  sidebar-items.js
executor/executor/: index.html  struct.QueryExecutor.html
executor/result/: enum.QueryResult.html  index.html  sidebar-items.js  struct.ResultSet.html
input_handler/: struct.Editor.html
input_handler/history/: struct.History.html
meridb/: all.html  index.html  sidebar-items.js
meridb/database/: fn.list_databases.html  index.html  sidebar-items.js
meridb/input_handler/: index.html  sidebar-items.js  struct.History.html  struct.InputHandler.html
meridb/parser/: sidebar-items.js
parser/: fn.parse_command.html  index.html
parser/ast/: enum.ASTNode.html  struct.Assignment.html
parser/lexer/: sidebar-items.js
ryu/: all.html  index.html  struct.Buffer.html  trait.Float.html
serde/: all.html  derive.Deserialize.html  derive.Serialize.html  index.html  macro.forward_to_deserialize_any.html  trait.Deserialize.html  trait.Deserializer.html  trait.Serialize.html  trait.Serializer.html
serde_derive/: all.html  derive.Deserialize.html  derive.Serialize.html  index.html
serde_json/: all.html  enum.Value.html  fn.from_reader.html  fn.from_slice.html  fn.from_str.html  fn.from_value.html  fn.to_string.html  fn.to_string_pretty.html  fn.to_value.html  fn.to_vec.html  fn.to_vec_pretty.html  fn.to_writer.html  fn.to_writer_pretty.html  index.html  macro.json.html  struct.Deserializer.html  struct.Error.html  struct.Map.html  struct.Number.html  struct.Serializer.html  struct.StreamDeserializer.html  type.Result.html
src/: lib.rs  main.rs
storage/: index.html  sidebar-items.js
syn/: all.html  enum.AttrStyle.html  enum.BinOp.html  enum.CapturedParam.html  enum.Data.html  enum.Expr.html  enum.FieldMutability.html  enum.Fields.html  enum.FnArg.html  enum.ForeignItem.html  enum.GenericArgument.html  enum.GenericParam.html  enum.ImplItem.html  enum.ImplRestriction.html  enum.Item.html  enum.Lit.html  enum.MacroDelimiter.html  enum.Member.html  enum.Meta.html  enum.Pat.html  enum.PathArguments.html  enum.PointerMutability.html  enum.RangeLimits.html  enum.ReturnType.html  enum.StaticMutability.html  enum.Stmt.html  enum.TraitBoundModifier.html  enum.TraitItem.html  enum.Type.html  enum.TypeParamBound.html  enum.UnOp.html  enum.UseTree.html  enum.Visibility.html  enum.WherePredicate.html  fn.parse.html  fn.parse2.html  fn.parse_file.html  fn.parse_str.html  index.html  macro.Token.html  (+171 more)
tests/: mod.rs
types/: enum.DataType.html  index.html
(+682 files in other folders)
