[workspace]
members = [
    "crates/api",
    "crates/catalog",
    "crates/cli",
    "crates/exec",
    "crates/sql",
    "crates/storage",
    "crates/types",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.lints]
clippy.dbg_macro = "warn"
clippy.implicit_clone = "warn"
clippy.result_large_err = "allow"
clippy.large_enum_variant = "allow"
clippy.uninlined_format_args = "allow"
rust.unknown_lints = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
snafu = "0.8.9"
crc32fast = "1.5.0"
libc = "0.2.178"
termios = "0.3.3"