[workspace]
members = [
    "crates/api",
    "crates/catalog",
    "crates/cli",
    "crates/exec",
    "crates/sql",
    "crates/storage",
    "crates/types",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.lints]
clippy.dbg_macro = "warn"
clippy.implicit_clone = "warn"
clippy.result_large_err = "allow"
clippy.large_enum_variant = "allow"
clippy.uninlined_format_args = "allow"
rust.unknown_lints = "deny"
rust.unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
crc32fast = "1.5.0"
libc = "0.2.178"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
snafu = "0.8.9"
termios = "0.3.3"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

## workspaces members
api = { path = "crates/api" }
catalog = { path = "crates/catalog" }
cli = { path = "crates/cli" }
exec = { path = "crates/exec" }
sql = { path = "crates/sql" }
storage = { path = "crates/storage" }
types = { path = "crates/types" }
