[package]
name = "api"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
catalog = { path = "../catalog" }
exec = { path = "../exec" }
sql = { path = "../sql" }

serde.workspace = true
snafu.workspace = true
crc32fast.workspace = true