[package]
name = "cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
api.workspace = true
clap.workspace = true
libc.workspace = true
sql.workspace = true
termios.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "meridb"
path = "src/main.rs"
